Renaming was incoherent

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -56,7 +56,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
 </dom-module>
 <script>
     Polymer({
-        is: 'myscript-ink-paper',
+        is: 'myscript-common-element',
         /**
          * Fired when a recognition result is successfully received.
          *
