Exposing options as an attribut

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -147,7 +147,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                 observer: '_hmackeyChanged'
             },
             /**
-             *
+             * A object with MyScriptJS option used to build the common element.
              */
             options : {
                 type: Object
