--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -33,9 +33,8 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
 @element myscript-common-element
 @blurb MyScript InkPaper to help developer for integrate handwriting recognition.
 @status beta
-@homepage http://myscriptwebcomponents.github.io/myscript-common-element
+@homepage https://github.com/MyScript/myscript-common-element/
 
-@demo demo/index.html Basic Demo
 -->
 <dom-module id="myscript-common-element">
     <style>
