[BUILD] Improve positionnoning of canvas with css with positionning other than relative.

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -43,6 +43,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
         }
 
         #myscript-input-area {
+            position: relative;
             height: 100%;
             width: 100%;
             min-height: 300px;
